[gd_scene load_steps=36 format=3 uid="uid://bet1ebge4k8uj"]

[ext_resource type="Theme" uid="uid://cl7rjoolrg5ji" path="res://resources/default.tres" id="1_2f4iu"]
[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_a70a8"]
[ext_resource type="Script" path="res://scenes/ui/color_progress.gd" id="3_ec8tn"]
[ext_resource type="Theme" uid="uid://dhjgqdx0xo07q" path="res://resources/styles/themes/button/big_button.tres" id="3_nmxfa"]
[ext_resource type="Script" path="res://scenes/ui/pull_up_box.gd" id="4_ksyrv"]
[ext_resource type="Script" path="res://scenes/ui/fish_stats.gd" id="5_avxj6"]
[ext_resource type="Script" path="res://scenes/ui/session_timer.gd" id="5_b58q4"]
[ext_resource type="Texture2D" uid="uid://dc4u6kdsr2yjv" path="res://assets/textures/fishing_game_pack/fish.png" id="5_csx41"]
[ext_resource type="Texture2D" uid="uid://c8wwmy73nbbr2" path="res://assets/textures/ui/temporary_menu_outline.png" id="6_fk8gg"]
[ext_resource type="Texture2D" uid="uid://cgbsj07ufmcad" path="res://assets/textures/ui/phone_graphic.svg" id="7_ce8hu"]
[ext_resource type="Script" path="res://scenes/ui/session_results.gd" id="7_wtygh"]
[ext_resource type="Script" path="res://scenes/ui/catch_failed_text.gd" id="8_106yx"]
[ext_resource type="Theme" uid="uid://clihegq77wleo" path="res://resources/styles/themes/button/med_button.tres" id="11_3ywn0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_504xa"]
bg_color = Color(0.219501, 0.219501, 0.219501, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
anti_aliasing_size = 0.2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjbc7"]
bg_color = Color(0, 1, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing_size = 0.2

[sub_resource type="Gradient" id="Gradient_auuwb"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugine"]
bg_color = Color(0.219501, 0.219501, 0.219501, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
anti_aliasing_size = 0.2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfwwg"]
bg_color = Color(0, 1, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing_size = 0.2

[sub_resource type="Gradient" id="Gradient_chtfh"]
offsets = PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1)

[sub_resource type="Animation" id="Animation_v11co"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b2xyo"]
resource_name = "show_gold"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0hbjr"]
_data = {
"RESET": SubResource("Animation_v11co"),
"show_gold": SubResource("Animation_b2xyo")
}

[sub_resource type="Animation" id="Animation_har3g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CastText:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CastText:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [28]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CastText:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bbsqf"]
resource_name = "hide"
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CastText:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CastText:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CastText:theme_override_font_sizes/font_size")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [28, 4]
}

[sub_resource type="Animation" id="Animation_vgvhj"]
resource_name = "show"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CastText:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CastText:theme_override_font_sizes/font_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [4, 32, 28]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CastText:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_odbb6"]
_data = {
"RESET": SubResource("Animation_har3g"),
"hide": SubResource("Animation_bbsqf"),
"show": SubResource("Animation_vgvhj")
}

[sub_resource type="Animation" id="Animation_85n8e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1k46k"]
resource_name = "cast"
length = 1.5
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0.25, 0.625, 0.75, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 1.74533, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 1.25, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_bdw6r"]
resource_name = "pull_up"
length = 1.5
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0.25, 0.625, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.5708, 1.74533, 0.523599, 0.785398]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 1.25, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ctq0"]
_data = {
"RESET": SubResource("Animation_85n8e"),
"cast": SubResource("Animation_1k46k"),
"pull_up": SubResource("Animation_bdw6r")
}

[sub_resource type="Animation" id="Animation_3bdjr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Margin/CatchFailed:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Margin/CatchFailed:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Margin/CatchFailed:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_i3i1b"]
resource_name = "appear"
length = 5.0
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Margin/CatchFailed:theme_override_font_sizes/font_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.375, 4.625, 4.875, 5),
"transitions": PackedFloat32Array(1, 1, 1e-05, 1, 1, 1),
"update": 0,
"values": [4, 28, 24, 24, 28, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Margin/CatchFailed:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Margin/CatchFailed:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 4.875, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 0.486275, 0.486275, 1), Color(1, 1, 1, 1), Color(1, 0.486275, 0.486275, 1), Color(1, 1, 1, 1), Color(1, 0.486275, 0.486275, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wccff"]
resource_name = "fade_out"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_46cgu"]
_data = {
"RESET": SubResource("Animation_3bdjr"),
"appear": SubResource("Animation_i3i1b"),
"fade_out": SubResource("Animation_wccff")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_iyjp8"]
atlas = ExtResource("5_csx41")
region = Rect2(11, 61, 26, 26)

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_a70a8")

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2f4iu")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="CastButton" type="Button" parent="Margin"]
visible = false
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("3_nmxfa")
text = "Hold to cast"

[node name="ReelButton" type="Button" parent="Margin"]
visible = false
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("3_nmxfa")
text = "Hold to Reel"

[node name="PullUpBox" type="VBoxContainer" parent="Margin"]
visible = false
layout_mode = 2
size_flags_vertical = 4
alignment = 1
script = ExtResource("4_ksyrv")

[node name="Label" type="Label" parent="Margin/PullUpBox"]
layout_mode = 2
text = "Pull up!"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Margin/PullUpBox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_504xa")
theme_override_styles/fill = SubResource("StyleBoxFlat_hjbc7")
max_value = 1.0
value = 0.5
show_percentage = false
script = ExtResource("3_ec8tn")
value_gradient = SubResource("Gradient_auuwb")

[node name="TopBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_vertical = 0

[node name="LineTension" type="ProgressBar" parent="Margin/TopBox"]
visible = false
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ugine")
theme_override_styles/fill = SubResource("StyleBoxFlat_hfwwg")
value = 50.0
show_percentage = false
script = ExtResource("3_ec8tn")
value_gradient = SubResource("Gradient_chtfh")

[node name="SessionTimer" type="Label" parent="Margin/TopBox"]
layout_mode = 2
size_flags_vertical = 0
text = "Session time remaining: 5:00"
horizontal_alignment = 1
script = ExtResource("5_b58q4")

[node name="Gold" type="Label" parent="Margin/TopBox"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Gold: 0"
horizontal_alignment = 1

[node name="Animation" type="AnimationPlayer" parent="Margin/TopBox/Gold"]
libraries = {
"": SubResource("AnimationLibrary_0hbjr")
}

[node name="CastText" type="Label" parent="Margin"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "Swing your phone and release!"
horizontal_alignment = 1

[node name="Animation" type="AnimationPlayer" parent="Margin/CastText"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_odbb6")
}

[node name="PhoneGraphic" type="Sprite2D" parent="Margin"]
visible = false
position = Vector2(240, 240)
texture = ExtResource("7_ce8hu")

[node name="Animation" type="AnimationPlayer" parent="Margin/PhoneGraphic"]
libraries = {
"": SubResource("AnimationLibrary_0ctq0")
}

[node name="CatchFailed" type="Label" parent="Margin"]
visible = false
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "The Fish Escaped!
Reel More Next Time!"
horizontal_alignment = 1
autowrap_mode = 3
script = ExtResource("8_106yx")

[node name="Animation" type="AnimationPlayer" parent="Margin/CatchFailed"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_46cgu")
}

[node name="FishCaught" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0901961, 0.145098, 0.784314)

[node name="Outline" type="TextureRect" parent="FishCaught"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_fk8gg")
expand_mode = 3

[node name="Margin" type="MarginContainer" parent="FishCaught"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2f4iu")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 100

[node name="VBox" type="VBoxContainer" parent="FishCaught/Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="FishCaught/Margin/VBox"]
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
text = "You caught a fish!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="FishStats" type="VBoxContainer" parent="FishCaught/Margin/VBox"]
layout_mode = 2
script = ExtResource("5_avxj6")

[node name="Margin" type="MarginContainer" parent="FishCaught/Margin/VBox/FishStats"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 20

[node name="Texture" type="TextureRect" parent="FishCaught/Margin/VBox/FishStats/Margin"]
layout_mode = 2
texture = SubResource("AtlasTexture_iyjp8")
expand_mode = 5

[node name="Name" type="Label" parent="FishCaught/Margin/VBox/FishStats"]
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
text = "Golden Fish"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Weight" type="Label" parent="FishCaught/Margin/VBox/FishStats"]
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
text = "2.00 lb"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Value" type="Label" parent="FishCaught/Margin/VBox/FishStats"]
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
text = "Worth 70 Gold"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Continue" type="Button" parent="FishCaught/Margin/VBox"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("3_nmxfa")
text = "Continue"

[node name="SessionResults" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0901961, 0.145098, 0.784314)
script = ExtResource("7_wtygh")

[node name="Outline" type="TextureRect" parent="SessionResults"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.847076
offset_right = 0.847076
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_fk8gg")
expand_mode = 3

[node name="Margin" type="MarginContainer" parent="SessionResults"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2f4iu")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 100

[node name="VBox" type="VBoxContainer" parent="SessionResults/Margin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="SessionResults/Margin/VBox"]
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
text = "It's time to see what you've got!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="FishCount" type="Label" parent="SessionResults/Margin/VBox"]
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
text = "Number of fish caught: 0"
horizontal_alignment = 1
autowrap_mode = 3

[node name="FishWeight" type="Label" parent="SessionResults/Margin/VBox"]
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
text = "Weight of fish caught: 0 lb"
horizontal_alignment = 1
autowrap_mode = 3

[node name="FishValue" type="Label" parent="SessionResults/Margin/VBox"]
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
text = "Worth a total of 0 gold."
horizontal_alignment = 1
autowrap_mode = 3

[node name="HighScore" type="Label" parent="SessionResults/Margin/VBox"]
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
text = "(Your high score is 10 gold.)
(New high score!)"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Buttons" type="VBoxContainer" parent="SessionResults/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayAgain" type="Button" parent="SessionResults/Margin/VBox/Buttons"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme = ExtResource("11_3ywn0")
text = "Play Again"

[node name="MainMenu" type="Button" parent="SessionResults/Margin/VBox/Buttons"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme = ExtResource("11_3ywn0")
text = "Main Menu"

[node name="Button" type="Button" parent="SessionResults"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="button_down" from="Margin/CastButton" to="." method="_on_cast_button_down"]
[connection signal="button_up" from="Margin/CastButton" to="." method="_on_cast_button_released"]
[connection signal="button_down" from="Margin/ReelButton" to="." method="_on_reel_button_button_down"]
[connection signal="button_up" from="Margin/ReelButton" to="." method="_on_reel_button_button_up"]
[connection signal="pressed" from="FishCaught/Margin/VBox/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="SessionResults/Margin/VBox/Buttons/PlayAgain" to="SessionResults" method="_on_play_again_pressed"]
[connection signal="pressed" from="SessionResults/Margin/VBox/Buttons/MainMenu" to="SessionResults" method="_on_main_menu_pressed"]
